Fix scrollbar jump

--- a/_assets/stylesheets/main.less
+++ b/_assets/stylesheets/main.less
@@ -1,6 +1,8 @@
 @import "../../_vendors/bootstrap/less/bootstrap";
 @import "syntax";
 
+html { overflow-y: scroll; }
+
 #header-wrapper { background-color: #ccc; 
   header { .container }
   a { text-decoration: none; }
